# musee-de-la-main-2022

./: .gitignore  .parcelrc  CNAME  README.md  config.js  index.html  package-lock.json  package.json  parallax-test.html
assets/: README.md  manifest.json  manifest.webmanifest
js/: AppDom.js  Audio.js  AudioAllower.js  Countdown.js  Dom.js  IFrame.js  Pages.js  Socket.js  StudentPage.js  Utils.js  event-bus.js  swipe.custom.js
launch-scripts/: runServer.bat
libs/: MediaPipeClient.js  MediaPipePose.js  Socket.js  event-bus.js  posenet.js  skeleton.js
pages/: index.html
projects/: README.md
screen/: index.html
scripts/: Storage.js  event-bus.js  mediapipe-client.js  mediapipe-loader.js  mediapipe-player.js  mediapipe-pose.js  mediapipe-smooth-pose.js  state-machine.js
server/: clicker.cjs  index.js  (+2 more)
static/projects/nathanael-iris/: Cargo.toml  app.js  audio_test.html  beach_seaShells_export._v3.glb  boids.js  display.glsl  gpu-particles.js  index.html  noise.js  out.webm  particle_test.html  particles_frag.glsl  particles_vertex.glsl  rd.js  style.css  vertex.glsl
static/projects/nathanael-iris/BL_proxy/logo.webm/: interp_free_run.blen_tc
static/projects/nathanael-iris/_scripts/: microphone.js
static/projects/nathanael-iris/js/: utils.js
static/projects/nathanael-iris/models/: fog.blend  fogwall.glb  seashells.glb
static/projects/nathanael-iris/pkg/: still_hands.js  still_hands_bg.wasm
static/projects/nathanael-iris/shaders/: BokehShader2.js
static/projects/nathanael-iris/src/: lib.rs
static/projects/nathanael-iris/textures/: pool_1k.exr
(+281 files in other folders)
