[package]
name = "still_hands"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

wasm-bindgen = "0.2"
js-sys = "0.3.55"
noise = "0.7.0"
num = "0.4.0"
console_error_panic_hook = "0.1.7"
